version 1.10, 2007-05-14:
=========================
* [from_fstring] in printers recognizes more formats. (Sean Seefried's suggestion)

version 1.09.6, 2006-07-07:
===========================
* bug fixed in Date.to_business (on some dates in the last days of january)

version 1.09.5, 2006-05-26:
===========================
* bug fixed in nth_weekday_of_month

version 1.09.4, 2006-02-13:
===========================
* bug fixed in printers with %I, %l, %p and %r (patch of Jerry Charumilind)
* add Time_Zone.is_dst and Time_Zone.hour_of_dst (from a suggestion of D. Peng)
* bug fixed when checking bounds in Time_Zone (patch of Daniel Peng)

version 1.09.3, 2005-01-17:
===========================
* bug fixed in Date.to_business

version 1.09.2, 2004-12-15:
===========================
* bug fixed in Date.from_unixfloat and Date.from_unixtm with time zones <> UTC

version 1.09.1, 2004-11-17:
===========================
* bug fixed in Calendar.to/from_unixfloat with time zones <> UTC
* add @since in the API documentation
* META file is now writable

version 1.09.0, 2004-11-13:
===========================
* add Date.to_business and Date.from_business (Richard Jone's suggestion)
* add the optional parameter ?month to Date.days_in_year
	(Richard Jones' suggestion)
* add Date.nth_weekday_of_month (Richard Jones' suggestion)
* Date: add some Christian dates (Richard Jones' suggestion)
* add Date.Period.ymd and Calendar.Period.ymds
* Printer: add the format string %i corresponding to the ISO-8601 notation
* Printer: ISO-8601 notation is now the default format
* add [equal] in all the modules
* Calendar.Period: bug fixed with negative period
* bug fixed in Calendar.to/from_unixfloat and Date.to/from_unixfloat
* bug fixed in weeks_in_year

version 1.08, 2004-05-18:
=========================
* add [week_first_last] computing the first and last days of a week in a year

version 1.07, 2004-03-22:
=========================
* compile even if no ocaml native compiler is available