@@ -1,6 +1,7 @@
 version 1.10, 2007-05-14:
 =========================
 * [from_fstring] in printers recognizes more formats. (Sean Seefried's suggestion)
+* add [Printer.set_word_regexp]
 
 version 1.09.6, 2006-07-07:
 ===========================
